--- a/invoicer-client/package.json
+++ b/invoicer-client/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/react-query": "^5.56.2",
+    "axios": "^1.13.2",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
