signup page successfully connected to the database

--- a/invoicer-backend/package.json
+++ b/invoicer-backend/package.json
@@ -2,6 +2,7 @@
   "name": "invoicer-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "devStart": "nodemon server.js",
     "start": "nodemon index.js"
